fixed aligned issue

--- a/packages/react-app/src/components/SearchFilter.css
+++ b/packages/react-app/src/components/SearchFilter.css
@@ -8,10 +8,6 @@
 }
 .react-datetime-picker__inputGroup__input{
     font-weight: 500 !important;
-    color : #35C5F3;
-}
-.react-datetime-picker__button svg {
-    stroke : #35C5F3
 }
 
 .date{
@@ -21,13 +17,11 @@
     font-family: Source Sans Pro;
 }
 
-
 .DropDown{
     border-radius: 10px;
     height: 2.5rem;
     background-color: inherit;
 }
-
 
 .button, input, input2 :focus{
     height: 35px;
@@ -50,11 +44,11 @@
 }
 
 .dropdown-heading{
-color: #E20880 !important;
-font-weight: 400 !important;
-font-size: 1.1rem !important;
-margin-top: 3px;
-font-family: Source Sans Pro;
+    /* color: #E20880 !important; */
+    font-weight: 400 !important;
+    font-size: 1.1rem !important;
+    margin-top: 3px;
+    font-family: Source Sans Pro;
 }
 
 
@@ -78,17 +72,17 @@ font-family: Source Sans Pro;
     /* height: 45px !important; */
     margin: 0px !important;
     padding: 0px !important;
-    }
-    .dropdown-container:focus-within{
+}
+    
+.dropdown-container:focus-within{
         border: 0px solid white !important;
         box-shadow: 0 0 0 0px white !important;
+}
+.cZpmt:focus{
+    /* border: 1px solid #674C9F !important; */
+    box-shadow: 0 0 0px white !important;
+}
 
-    }
-    .cZpmt:focus{
-        /* border: 1px solid #674C9F !important; */
-        box-shadow: 0 0 0px white !important;
-
-    }
 .input2{
     border: 0px solid white;
     font-size: 1.1rem;
@@ -98,16 +92,14 @@ font-family: Source Sans Pro;
     color: #35C5F3;
     padding-left: 0.7rem;
     width: 100%;
-    font-family: Source Sans Pro;
 
 }
 .input2::placeholder
 {
-        opacity: 1;
-        letter-spacing: 0.10em;
-        font-weight: 400;
-        color: #B0B0B0 !important;
-        
+    opacity: 1;
+    font-weight: 400;
+    font-family: Source Sans Pro;
+    color: #B0B0B0 !important;
 }
 
 
